공통코드 조회 1차 완료